--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
                                     <ul>
 
                                         <li>
-                                            <a class="button x-small" href="https://github.com/acerwebai/VangoghCrazyWorld-Web" target="_blank"> <i class="fa fa-code"></i> </a>
+                                            <a class="button x-small" target="_blank"> <i class="fa fa-code"></i> </a>
                                         </li>
 
 
                                         <li>
-                                            <a class="button x-small" href="https://github.com/acerwebai/VangoghCrazyWorld-Windows" target="_blank"> <i class="fa fa-windows"></i> </a>
+                                            <a class="button x-small" target="_blank"> <i class="fa fa-windows"></i> </a>
                                         </li>
                                         <li>
-                                            <a class="button x-small" href="https://github.com/acerwebai/VangoghCrazyWorld-Android" target="_blank"> <i class="fa fa-android"></i> </a>
+                                            <a class="button x-small" target="_blank"> <i class="fa fa-android"></i> </a>
                                         </li>
                                         <li>
-                                            <a class="button x-small ncs" href="https://github.com/acerwebai/VangoghCrazyWorld-NCS" target="_blank"> <img src="images/icon_AIot.svg" class="svg"/> </a>
+                                            <a class="button x-small ncs" target="_blank"> <img src="images/icon_AIot.svg" class="svg"/> </a>
                                         </li>
                                         <li>
 
-                                            <a class="button x-small" href="https://github.com/acerwebai/VangoghCrazyWorld" target="_blank"> <i class="fa fa-github"></i> </a>
+                                            <a class="button x-small" href="https://github.com/acerwebai/ImageClassification-makeblock-AImBot" target="_blank"> <i class="fa fa-github"></i> </a>
                                         </li>
 
                                     </ul>
@@ -80,9 +80,9 @@
 
                 </div>
             </section>
-            <div id="menu" align="center" valign="center">            
-                <input id="service" type="text" size=40 list="services" placeholder="Bluetooth Service" style="visibility:hidden">         
-                <button id="AIAndmBot" align="center" valign="center" onclick="connect_AIAndmBot()">Connect AI mBot !!</button>  
+            <div id="menu"> 
+                <button id="AIAndmBot" onclick="connect_AIAndmBot()">Connect AI mBot !!</button>             
+                <input id="service" type="text" size=40 list="services" placeholder="Bluetooth Service" style="visibility:hidden">                        
                 <input id="name" type="text" size=17 placeholder="Device Name" style="visibility:hidden">  
                 <input id="namePrefix" type="text" size=17 placeholder="Device Name Prefix" style="visibility:hidden">
             </div>
