20200415_update the UX 3

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="wrapper">
         
             <ng-include src="'header.html'"></ng-include>
-            <section class="page-title pt-50 pb-10 bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/banner.png);">
+            <section class="page-title pt-50 pb-10 bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/banner_mBot.jpg);">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
